// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders correctly with the default variant 1`] = `
.c0 {
  border-color: transparent;
  border-width: 1px;
  margin: 0.5rem;
  font-size: 1.5rem;
  letter-spacing: 1px;
  font-weight: 700;
  line-height: 1.2;
  box-sizing: border-box;
  min-width: 12rem;
  padding: 1rem 2rem;
  background: #0073e6;
  color: #ffffff;
}

.c0:hover {
  background: #0056b8;
}

.c0:focus {
  background: #0073e6;
  outline: 4px solid;
  outline-color: #0073e6;
  outline-offset: 2px;
}

.c0:active {
  background: #003c8a;
}

.c0:disabled,
.c0:hover:disabled,
.c0:hover:focus:disabled {
  background: #a6c3d8;
  color: #466678;
}

<button
  class="c0"
  variant="solid"
>
  Action
</button>
`;

exports[`Button > renders correctly with the ghost variant 1`] = `
.c0 {
  border-color: transparent;
  border-width: 1px;
  margin: 0.5rem;
  font-size: 1.5rem;
  letter-spacing: 1px;
  font-weight: 700;
  line-height: 1.2;
  box-sizing: border-box;
  min-width: 12rem;
  padding: 1rem 2rem;
  background: transparent;
  color: #0073e6;
}

.c0:hover {
  background: #e6f2f9;
}

.c0:focus {
  outline: 4px solid;
  outline-color: #0073e6;
  outline-offset: 2px;
}

.c0:active {
  background: #c8deec;
}

.c0:disabled,
.c0:hover:disabled,
.c0:hover:focus:disabled {
  color: #466678;
}

<button
  class="c0"
  variant="ghost"
>
  Action
</button>
`;

exports[`Button > renders correctly with the outline variant 1`] = `
.c0 {
  border-color: transparent;
  border-width: 1px;
  margin: 0.5rem;
  font-size: 1.5rem;
  letter-spacing: 1px;
  font-weight: 700;
  line-height: 1.2;
  box-sizing: border-box;
  min-width: 12rem;
  padding: 1rem 2rem;
  background: transparent;
  border-color: #0073e6;
  border-style: solid;
  border-width: 1px;
  color: #0073e6;
}

.c0:hover {
  background: #0073e6;
  color: #ffffff;
}

.c0:focus {
  background: #0073e6;
  color: #ffffff;
  outline: 4px solid;
  outline-color: #0073e6;
  outline-offset: 2px;
}

.c0:active {
  background: #003c8a;
  color: #ffffff;
}

.c0:disabled,
.c0:hover:disabled,
.c0:hover:focus:disabled {
  background: transparent;
  color: #466678;
  border-color: #466678;
}

<button
  class="c0"
  variant="outline"
>
  Action
</button>
`;
